# holohub

./: .gitignore  run
applications/: CMakeLists.txt
applications/distributed/grpc/grpc_endoscopy_tool_tracking/cpp/: endoscopy_tool_tracking.yaml
applications/endoscopy_tool_tracking/cpp/: main.cpp
applications/endoscopy_tool_tracking/python/: endoscopy_tool_tracking.py  endoscopy_tool_tracking.yaml
applications/grpc_hello_world/: grpc_client.cpp
applications/h264/: CMakeLists.txt  Dockerfile  README.md
applications/h264/grpc_h264_endoscopy_tool_tracking/: CMakeLists.txt  README.md
applications/h264/grpc_h264_endoscopy_tool_tracking/cpp/: CMakeLists.txt  app_base.hpp  app_cloud.hpp  app_edge.hpp  endoscopy_tool_tracking.yaml  entity_client.hpp  entity_server.hpp  grpc_client_ops.hpp  grpc_ops.hpp  grpc_server_ops.hpp  main.cpp  metadata.json  operators.cc  resource_queue.hpp  video_input_fragment.hpp  viz_fragment.hpp
applications/h264/grpc_h264_endoscopy_tool_tracking/protos/: common.cmake  entity_service.proto
applications/h264/grpc_h264_endoscopy_tool_tracking/python/: CMakeLists.txt  h264_endoscopy_tool_tracking_distributed.py  metadata.json
applications/h264/h264_endoscopy_tool_tracking_distributed/cpp/: CMakeLists.txt  endoscopy_tool_tracking.yaml  main.cpp  metadata.json
applications/h264/h264_video_decode/cpp/: CMakeLists.txt  h264_video_decode.yaml  main.cpp
cmake/: grpc_generate_cpp.cmake
gxf_extensions/lstm_tensor_rt_inference/: tensor_rt_inference.cpp
operators/: CMakeLists.txt
operators/grpc_operators/: CMakeLists.txt  asynchronous_condition_queue.hpp  conditional_variable_queue.hpp  entity_client.hpp  entity_server.hpp  grpc_client_request.hpp  grpc_client_response.hpp  grpc_server_request.hpp  grpc_server_response.hpp  tensor_proto.cpp  tensor_proto.hpp
operators/grpc_operators/common/: asynchronous_condition_queue.hpp  conditional_variable_queue.hpp
operators/grpc_operators/protos/: holoscan.proto
operators/lstm_tensor_rt_inference/: lstm_tensor_rt_inference.cpp
operators/lstm_tensor_rt_inference/python/: lstm_tensor_rt_inference.cpp
